...
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingTop="8dp">

    <EditText
        android:id="@+id/dialogEventTitleInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/home_event_hint_title"
        android:inputType="textCapSentences"
        android:maxLines="1" />

    <EditText
        android:id="@+id/dialogEventTimeInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="@string/home_event_hint_time"
        android:clickable="true"
        android:cursorVisible="false"
        android:focusable="false"
        android:inputType="none"
        android:maxLines="1" />

    <EditText
        android:id="@+id/dialogEventCategoryInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="@string/home_event_hint_category"
        android:inputType="textCapWords"
        android:maxLines="1" />

    <EditText
        android:id="@+id/dialogEventLocationInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="@string/home_event_hint_location"
        android:inputType="textCapWords"
        android:maxLines="1" />
...
